--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			height: 124px;
 			line-height: 124px;
 		}
-		,thermometer, .order, .social {
+		.thermometer, .order, .social {
 			/*line-height to vertically center */
 			height: 40px;
 			line-height: 40px;
@@ -75,8 +75,8 @@
 				<div class="social">
 					Social
 				</div>
+				</div>
 			</div>
-		</div>
 		<div class="row section1">
 			<div class="span12">
 				Marketing Section 1
