--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
 		rel="stylesheet" type="text/css">
+		<link href="assets/css/bootstrap.css" rel="stylesheet">
+    		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    		<link href="assets/css/docs.css" rel="stylesheet">
+    		<link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 		<style type="text/css">
 		/* Large desktop */
 		@media (min-width: 980px){
