--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<title>Primul meu proiect</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/fond-awesome/3.0.2/css/font-awesome.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 		<link rel="stylesheet" href="https://raw.github.com/noizwaves/bootstrap-social-buttons/master/social-buttons.css">
 		<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
@@ -13,10 +14,6 @@
 		<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" 
 		rel="stylesheet" type="text/css">
-		<link href="assets/css/bootstrap.css" rel="stylesheet">
-    		<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-    		<link href="assets/css/docs.css" rel="stylesheet">
-    		<link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 		<style type="text/css">
 		/* Large desktop */
 		@media (min-width: 980px){
@@ -43,7 +40,7 @@
 			}
 		}
 		/* All forms factors */
-		
+
 		/* Main body and headings */
 		body {
 			font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
@@ -78,9 +75,9 @@
 		.statistics h3, .statistics p{
 			color: white;
 		 }
-		 
+
 		 /* Marketing Copy and Footer */
-		 
+
 		 .copy {
 			padding-top: 2.5%;
 			padding-bottom: 2.5%;
@@ -177,8 +174,8 @@
 				</div>
 				<div class="span8 offset2 social">
 					<!-- Social buttons. -->
-					<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter </button>
-					<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook </button>
+					<a href="http://www.twitter.com/" class="btn btn-twitter"><i class="icon-twitter" ></i> | Twitter</a>
+					<a href="http://www.facebook.com/" class="btn btn-facebook"><i class="icon-facebook" ></i> | Facebook</a>
 				</div>
 			</div>
 		</div>
@@ -199,7 +196,7 @@
 				</p>
 			</div>
 		</div>
-	
+
 		<div class="row-fluid section2">
 			<div class="span5 offset1 copy copy-right">
 				<p>
